# Minesweeper

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake.yml
examples/: CMakeLists.txt  Minesweeper_Examples.cpp  minesweeper_examples.cpp  tempMinesweeper_Examples.cpp
include/minesweeper/: Grid.h  IRandom.h  Random.h  game.h  game.tpp  i_random.h  random.h  type_traits.h  visual_minesweeper_cell.h
src/: CMakeLists.txt
src/minesweeper/: Cell.cpp  Cell.h  Grid.cpp  Random.cpp  cell.cpp  cell.h  game.cpp  random.cpp
tests/: CMakeLists.txt  Minesweeper_Tests.cpp  minesweeper_game_tests.cpp  minesweeper_random_tests.cpp  minesweeper_tests.cpp  minesweeper_type_traits_tests.cpp  test_config.h.in
tests/data/: checkedWinGame_fourByEight_print.txt  checkedWinGame_fourByEight_serialisation.json  emptyGame_print.txt  emptyGame_serialisation.json  invalidMarkLossGame_nineByFive_print.txt  invalidMarkLossGame_nineByFive_serialisation.json  lossGame_fiveByThree_print.txt  lossGame_fiveByThree_serialisation.json  markedWinGame_fiveByFour_print.txt  markedWinGame_fiveByFour_serialisation.json  startedGame_fiveBySix_print.txt  startedGame_fiveBySix_serialisation.json  startedGame_sixByEight_print.txt  startedGame_sixByEight_serialisation.json  unfinishedGame_sevenBySeven_print.txt  unfinishedGame_sevenBySeven_serialisation.json  unstartedGame_sevenByFour_print.txt  unstartedGame_sevenByFour_serialisation.json
tests/data/invalid-serialisation/: invalidGridsize.json  invalidJsonMissingBrace.json  invalidJsonMissingCellTag.json  invalidJsonMissingCommaInCell.json  invalidMagic.json  invalidNumOfMines.json  invalidVersion.json
